<resources>
    <string name="app_name">iTandem</string>
    <string name="app_id">338662219666539</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find_tandem">Find Tandem</string>
    <string name="title_activity_tandem_place">Tandem Places</string>
    <string name="title_activity_message">Message</string>
    <string name="options">Options</string>
    <string-array name="nav_options">
        <item>My Tandem Preferences</item>
        <item>Share iTandem</item>
        <item>Logout</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_my_profile">  My Profile</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="I_want_to_find">I want to find...</string>
    <string name="find_tandem">Find Tandem</string>
    <string name="Join_Tandem_Place">Join Tandem Place</string>
    <string name="repeated_encounter">You already have an encounter with </string>
    <string name="number_of_members">PARTICIPANTS</string>


    <array name="navigation_icons">
        <item></item>
        <item></item>
        <item></item>
    </array>
    <string name="title_activity_my_preferences">My Preferences</string>
    <string name="title_activity_share_itandem">Share ITandem</string>
    <string name="title_activity_i_tandem_login">iTandem Login</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_activity_tandem_login">Tandem Login</string>
    <string name="title_activity_profile_edit_info">Profile Edit Info</string>
    <string name="title_activity_find_tandem_result">Find Tandem Result</string>
    <string name="title_activity_show_profile">Show Profile</string>
    <string name="title_activity_chat">iTandem Chat</string>
    <string name="title_activity_header_regulator">header Regulator</string>
    <string name="tandem_distance">Tandem Distance: </string>
    <string name="km">Km</string>
    <string name="save_changes">Save Changes</string>
    <string name="languages_I_speak">Languages I speak ...</string>
    <string name="languages_I_want_to_learn">Languages I want to learn...</string>
    <string name="about_me">About Me:</string>
    <string name="send_message">Send Message</string>
    <string name="create_tandem_place">Create a Tandem Place</string>
    <string name="find_tandem_place">Find a Tandem Place</string>

    <string name="spanish">Español</string>
    <string name="english">English</string>
    <string name="basque">Euskera</string>
    <string name="italian">Italiano</string>
    <string name="french">Français</string>
    <string name="catalan">Català</string>
    <string name="name">name</string>

    <string name="I_speak">I speak: </string>
    <string name="I_want_to_learn">I want to learn: </string>

    <string name="you_will_find_encounters">You will find Tandem Encounters in </string>
    <string name="you_will_find_encounters_in_your_current_location">in your current location </string>

    <string name="title_activity_create_tandem_places">CreateTandemPlaces</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_find_tandemplace">FindTandemplace</string>
    <string name="title_activity_find_tandem_place">Map</string>
    <string name="title_activity_create_tandem_place">Map</string>

    <string name="where">Where?</string>
    <string name="go_button">Go!</string>
    <string name="tandem_place_title">TANDEM PLACE TITLE</string>

    <string name="tandem_place_description">DESCRIPTION</string>

    <string name="tandem_place_when">WHEN AND FREQUENCY</string>

    <string name="tandem_place_create">CREATE TANDEM PLACE</string>
    <string name="where_find_tandem">Where do you want to find Tandem Encounters?</string>
    <string name="use_my_location">Use Current Location</string>
    <string name="title_activity_tandem_chat">TandemChatActivity</string>
    <string name="latitude_longitude_null">Turn on the GPS on your device and go to your profile to update the coordinates</string>
    <string name="choose_language_try_again">Choose a language to find and try again</string>
    <string name="title_activity_jsdbfkjsdbf">Map11111</string>
    <string name="title_activity_tandem_place_messages">TandemPlaceMessages</string>
    <string name="empty_fields_notification">There are empty fields. Check them and try again</string>
    <string name="new_message_notification">You have a new Tandem Message from </string>
    <string name="new_message_click_notification">"Click here to see the message"</string>
    <string name="delete_chat">"Delete Chat"</string>



</resources>
