<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffffff"
    tools:context="com.example.josurubio.itandem.MyTandemPreferences">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tandem_distance"
        android:id="@+id/tandemDistanceText"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="40dp"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:id="@+id/saveChangesButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/myLocButton"
        android:layout_alignEnd="@+id/myLocButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:textColor="#ff000000"
        android:paddingTop="40dp"
        android:layout_alignBottom="@+id/tandemDistanceText"
        android:layout_toRightOf="@+id/tandemDistanceText"
        android:layout_toEndOf="@+id/tandemDistanceText"
        android:paddingLeft="40dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/goButton3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignTop="@+id/editText2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/seekBar"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:singleLine="true"
        android:text="@string/where_find_tandem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/goButton3"
        android:layout_alignEnd="@+id/goButton3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/goButton3"
        android:layout_toStartOf="@+id/goButton3" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_my_location"
        android:id="@+id/myLocButton"
        android:layout_below="@+id/editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
